post swagger setting
