# api/user.go
@@ -17,18 +17,6 @@ func NewUserController(userRepository repository.UserRepository) *UserController
 	return &UserController{userRepository: userRepository}
 }
 
-// GetAllUser godoc
-// @Summary Get all users
-// @Description Get all user items
-// @Tags users
-// @Accept json,xml
-// @Produce json
-// @Param mediaType query string false "mediaType" Enums(xml, json)
-// @Param page query int false "page" minimum(1)
-// @Param limit query int false "size" minimum(1)
-// @Success 200 {array} model.User
-// @Failure 500 {object} handler.APIError
-// @Router /users [get]
 func (userController *UserController) GetAllUser(c echo.Context) error {
 	page, _ := strconv.ParseInt(c.QueryParam("page"), 10, 64)
 	limit, _ := strconv.ParseInt(c.QueryParam("limit"), 10, 64)
@@ -36,19 +24,6 @@ func (userController *UserController) GetAllUser(c echo.Context) error {
 	pagedUser, _ := userController.userRepository.GetAllUser(page, limit)
 	return utils.Negotiate(c, http.StatusOK, pagedUser)
 }
-
-// SaveUser godoc
-// @Summary Create a user
-// @Description Create a new user item
-// @Tags users
-// @Accept json,xml
-// @Produce json
-// @Param mediaType query string false "mediaType" Enums(json, xml)
-// @Param user body model.UserInput true "New User"
-// @Success 201 {object} model.User
-// @Failure 400 {object} handler.APIError
-// @Failure 500 {object} handler.APIError
-// @Router /users [post]
 func (userController *UserController) SaveUser(c echo.Context) error {
 	payload := new(model.UserInput)
 	if err := utils.BindAndValidate(c, payload); err != nil {
@@ -63,18 +38,6 @@ func (userController *UserController) SaveUser(c echo.Context) error {
 	return utils.Negotiate(c, http.StatusCreated, createdUser)
 }
 
-// GetUser godoc
-// @Summary Get a user
-// @Description Get a user item
-// @Tags users
-// @Accept json,xml
-// @Produce json
-// @Param mediaType query string false "mediaType" Enums(json, xml)
-// @Param id path string true "User ID"
-// @Success 200 {object} model.User
-// @Failure 404 {object} handler.APIError
-// @Failure 500 {object} handler.APIError
-// @Router /users/{id} [get]
 func (userController *UserController) GetUser(c echo.Context) error {
 	id := c.Param("id")
 
@@ -86,20 +49,6 @@ func (userController *UserController) GetUser(c echo.Context) error {
 	return utils.Negotiate(c, http.StatusOK, user)
 }
 
-// UpdateUser godoc
-// @Summary Update a user
-// @Description Update a user item
-// @Tags users
-// @Accept json,xml
-// @Produce json
-// @Param mediaType query string false "mediaType" Enums(json, xml)
-// @Param id path string true "User ID"
-// @Param user body model.UserInput true "User Info"
-// @Success 200 {object} model.User
-// @Failure 400 {object} handler.APIError
-// @Failure 404 {object} handler.APIError
-// @Failure 500 {object} handler.APIError
-// @Router /users/{id} [put]
 func (userController *UserController) UpdateUser(c echo.Context) error {
 	id := c.Param("id")
 
@@ -116,18 +65,6 @@ func (userController *UserController) UpdateUser(c echo.Context) error {
 	return utils.Negotiate(c, http.StatusOK, user)
 }
 
-// DeleteUser godoc
-// @Summary Delete a user
-// @Description Delete a new user item
-// @Tags users
-// @Accept json,xml
-// @Produce json
-// @Param mediaType query string false "mediaType" Enums(json, xml)
-// @Param id path string true "User ID"
-// @Success 204 {object} model.User
-// @Failure 404 {object} handler.APIError
-// @Failure 500 {object} handler.APIError
-// @Router /users/{id} [delete]
 func (userController *UserController) DeleteUser(c echo.Context) error {
 	id := c.Param("id")
 
